--- a/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
@@ -16,94 +16,106 @@ Localization
 	#LOC_SMX_Mk2Generator_Name = Mk2 Multi-Fuel Generator
 	#LOC_SMX_MK2Generator_desc = A Mk2 fuselage mounted heavy-duty electric generator for when fuelcells just simply aren't enough to meet a vessel's power requirements. This unit fills the middle ground between fuelcells and nuclear reactors, producing more power than the former without the weight and cost of the latter. Like its smaller bretheren, this unit uses LiquidFuel/Oxidizer to produce power, but unlike them, it can also use raw Ore, though at reduced efficiency.
 
-	#LOC_SMX_Mk2generator_NoOre_desc = Need electricity but don't have the space to radially attach Fuel Cells? The Mk2 Fuel Cell generator offers the same easy power generation that Fuel Cells offer, but in a convenient Mk2 fuselage section.  Like the smaller fuel cells, this generator operates by converting fuel and oxidizer into energy.
+	#LOC_SMX_MK2GeneratorNoOre_desc = Need electricity but don't have the space to radially attach Fuel Cells? The Mk2 Fuel Cell generator offers the same easy power generation that Fuel Cells offer, but in a convenient Mk2 fuselage section.  Like the smaller fuel cells, this generator operates by converting fuel and oxidizer into energy.
 
-	#LOC_SMX_MK2Generator_Tags = array bank charge convert e/c elect energ pack power volt watt
+	#LOC_SMX_MK2Generator_Tags = SMX array bank charge convert e/c elect energ pack power volt watt
 
 	#LOC_SMX_InlinDrill_Name = 'Prospector' Aerospace Mining Excavator
 	#LOC_SMX_InlineDirll_desc = A compact mining drill designed to extract usable materials from asteriods and planetary regolith. When not deployed, it fits within a mk2 fuselage compatible aeroshell housing. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat. Yields 2/3s as much Ore/s as the stock Radial Drill.
-	#LOC_SMX_InlineDril_Tags = drill extractor harvest isru mine )mining (ore resource
+	#LOC_SMX_InlineDril_Tags = SMXdrill extractor harvest isru mine )mining (ore resource
 
 	#LOC_SMX_MK2OreTank_Name = Mk2 Holding Tank
 	#LOC_SMX_MK2OreTank_Desc = A tank that can be used for storing raw materials that has been fitted into a Mk2 frame. 
-	#LOC_SMX_MK2OreTank_tags = black isru mine )mining (ore resource store
+	#LOC_SMX_MK2OreTank_tags = SMX black isru mine )mining (ore resource store
 
 	#LOC_SMX_MK2Refinery_Name = Convert-O-Tron Mk2
 	#LOC_SMX_MK2Refinery_Desc = A smaller version of Kerbodyne's mobile processing plant, this module can take raw materials containing even trace amounts of oxygen and hydrogen, and crack them into useful fuel products.  When operated by a skilled engineer, you will be able to operate with better efficiency.  This model, while lacking the power of its bigger brother, is still capable of full ore conversion options, unlike the smaller 125 model. This module operates best at its ideal operating temperature, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat.
-	#LOC_SMX_MK2Refinery_tags = conver isru mine )mining (ore process resource
+	#LOC_SMX_MK2Refinery_tags = SMX mk2conver isru mine )mining (ore process resource
 
+	#LOC_SMX_MK3Refinery_Name = Convert-O-Tron Mk3
+	#LOC_SMX_MK3Refinery_Desc = A large-sclae mobile processing plant fitted into a Mk3 hull section. Like other converters, this module can take raw materials containing even trace amounts of oxygen and hydrogen, and crack them into useful fuel products.  When operated by a skilled engineer, you will be able to operate with better efficiency. This module operates best at its ideal operating temperature, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat.
+	#LOC_SMX_MK3Refinery_tags = SMX mk3conver isru mine )mining (ore process resource
+
+	#LOC_SMX_DriverRCS_title = EMMD-2 4-Way Mass Driver RCS
 	#LOC_SMX_Driver0_title = EMMD-8 "Onager" Mass Driver
 	#LOC_SMX_Driver1_title = EMMD-32 "Trebuchet" Mass Driver
-	#LOC_SMX_Driver_desc = An experimental thruster design that generates thrust by electromagnetically propelling dust, gravel, and other debris resulting as a by-product of orbital mining. While the system generates low thrust, substantial waste heat, and an even larger power bill; unlike chemical engines it can take advantage of ISRU sourced propellant without the need for large and bulky ISRU converters to process it into a usable form.
-	#LOC_SMX_Driver_tags = ( mass drive efficient engine ( isru probe thruster vacuum ore
+	#LOC_SMX_Driver_desc = An experimental thruster design that generates thrust by electromagnetically propelling dust, gravel, and other debris resulting as a by-product of orbital mining. While the system generates low thrust, substantial waste heat, and an even larger power bill, unlike chemical engines it can take advantage of ISRU sourced propellant without the need for large and bulky ISRU converters to process it into a usable form.
+	#LOC_SMX_Driver_tags = SMX ( mass drive efficient engine ( isru probe thruster vacuum ore
 	
 	#LOC_SMX_Size0Generator_Name = Small Fuel Cell Generator
 	#LOC_SMX_Size0Generator_desc = Need electricity but don't have the space to radially attach Fuel Cells?   The Fuel Cell generator offers the same easy power generation that Fuel Cells offer, but in a convenient 0.625 meter housing.  Like the smaller fuel cells, this generator operates by converting fuel and oxidizer into energy.
-	#LOC_SMX_Size0Generator_tags = array bank charge convert e/c elect energ pack power volt watt
+	#LOC_SMX_Size0Generator_tags = SMX array bank charge convert e/c elect energ pack power volt watt
 
 	#LOC_SMX_Size0Converter_Name = RefineOre Y-600 Mini Converter Module
 	#LOC_SMX_Size0Converter_desc = This mobile processing plant can take raw materials containing even trace amounts of oxygen and hydrogen, and crack them into useful fuel products.  When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat.
-	#LOC_SMX_Size0Converter_tags = conver isru mine )mining (ore process resource
+	#LOC_SMX_Size0Converter_tags = SMX conver isru mine )mining (ore process resource
 
 	#LOC_SMX_Size0reTank_Name = Tiny Holding Tank
 	#LOC_SMX_Size0OreTank_desc = A tiny tank that can be used for storing raw materials.  Not to be used as a bouncy castle.
-	#LOC_SMX_Size0OreTank_tags = black isru mine )mining (ore resource store
+	#LOC_SMX_Size0OreTank_tags = SMX black isru mine )mining (ore resource store
 
     	#LOC_SMX_Size0Drill_Name = 'Trowel' Stack Mining Excavator
 	#LOC_SMX_Size0Drill_desc = A small scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. Yields the same Ore/s as the stock mini drill. 
-	#LOC_SMX_Size0Drill_tags = drill extractor harvest isru mine )mining (ore resource
+	#LOC_SMX_Size0Drill_tags = SMX drill extractor harvest isru mine )mining (ore resource
 
-	#LOC_SMX_Size1Condenser_title = Cryogenic Atmospheric Condenser
+	#LOC_SMX_Size1Condenser_title = RS-1 Cryogenic Atmospheric Condenser
 	#LOC_SMX_Size1Condenser_desc = Intended for use in oxygenated atmospheres, this unit is used for cryogenic distallation and condensation of oxygen from the atmosphere to extract and liquefy it to turn it into Oxidizer. Due to the nature of the distallation process, the unit is also capable of collecting Xenon, and can do so in any atmosphere.
-	#LOC_SMX_Size1Condenser_tags = aero (air aircraft breathe fuel inlet intake jet oxygen plane suck supersonic extractor harvest isru 
+	#LOC_SMX_Size1Condenser_tags = SMX aero (air aircraft breathe fuel inlet intake jet oxygen plane suck supersonic extractor harvest isru
 
 	#LOC_SMX_Size1Generator_title = Fuel Cell Generator
 	#LOC_SMX_Size1Generator_desc = Need electricity but don't have the space to radially attach Fuel Cells?   The Fuel Cell generator offers the same easy power generation that Fuel Cells offer, but in a convenient 1.25 meter housing.  Like the smaller fuel cells, this generator operates by converting fuel and oxidizer into energy.
-	#LOC_SMX_Size1Generator_tags = array bank charge convert e/c elect energ pack power volt watt
+	#LOC_SMX_Size1Generator_tags = SMX array bank charge convert e/c elect energ pack power volt watt
 
 	#LOC_SMX_Size1InlineDrill_title = 'Wildcat' Vertical Inline Mining Excavator 
 	#LOC_SMX_Size1HInlineDrill_title = 'Wildcat' Horizontal Inline Mining Excavator
 	#LOC_SMX_Size1InlineDrill_desc = Like other mining excavators, this drill is capable of extracting resources from planetary regolith and asteroidal bodies for later storage and processing. Unlike other drills, this unit was designed with atmospheric use in mind, featuring an integrated inline aeroshell housing for ease of mounting and greater aerodynamic performance. When operated by a skilled engineer, you will be able to operate with better efficiency. These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat.
 
 	#LOC_SMX_Size1HInlineDrill_desc = Like other mining excavators, this drill is capable of extracting resources from planetary regolith and asteroidal bodies for later storage and processing. Unlike other drills, this unit was designed for use on aircraft, featuring an integrated inline aeroshell housing for ease of mounting and greater aerodynamic performance. When operated by a skilled engineer, you will be able to operate with better efficiency. These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat.
-	#LOC_SMX_Size1InlineDrill_tags = drill extractor harvest isru mine )mining (ore resource
+	#LOC_SMX_Size1InlineDrill_tags = SMX drill extractor harvest isru mine )mining (ore resource
 
 	#LOC_SMX_Size1Drill_title = 'Tremor' Stack Mining Excavator
 	#LOC_SMX_Size1Drill_desc = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. 
-	#LOC_SMX_Size1Drill_tags = drill extractor harvest isru mine )mining (ore resource
+	#LOC_SMX_Size1Drill_tags = SMX drill extractor harvest isru mine )mining (ore resource
 
-	#LOC_SMX_Size1Pump_title = Stack Oceanic Extractor
+	#LOC_SMX_Size1Pump_title = D4-MP Stack Oceanic Extractor
+	#LOC_SMX_Size1PumpInline_title = Inline Oceamic Extractor
 	#LOC_SMX_Size1Pump_desc = Originally a bilge pump for ocean going vessels, this unit has been adapted and modified to serve as an oceanic resource harvester by making it pump liquids in rather than out. Warning: Prolonged use may cause vessel to sink.
-	#LOC_SMX_Size1Pump_tags = drill extractor harvest isru mine )mining (ore resource ocean water pump
 
-	#LOC_SMX_Size2Condenser_title = HD-RS7 Cryogenic Atmospheric Condenser
+	#LOC_SMX_Size2Pump_title = W-37 Stack Oceanic Extractor
+	#LOC_SMX_Size2Pump_desc = A heavy duty pump unit for oceanic resource harvesting, featuring larger intakes and greater flow rate than smaller models. Warning: Prolonged use may cause vessel to sink.
+	#LOC_SMX_Size1Pump_tags = SMX drill extractor harvest isru mine )mining (ore resource ocean water pump
+
+	#LOC_SMX_Size2Condenser_title = HD-RS7 Cryogenic Atmospheric Condenser 
 	#LOC_SMX_Size2Condenser_desc = Intended for use in oxygenated atmospheres, this unit is used for cryogenic distallation and condensation of oxygen from the atmosphere to extract and liquefy it to turn it into Oxidizer. Due to the nature of the distallation process, the unit is also capable of collecting Xenon, and can do so in any atmosphere.
-	#LOC_SMX_Size2Condenser_tags = aero (air aircraft breathe fuel inlet intake jet oxygen plane suck supersonic extractor harvest isru 
+	#LOC_SMX_Size2Condenser_tags = SMX aero (air aircraft breathe fuel inlet intake jet oxygen plane suck supersonic extractor harvest isru
 
 	#LOC_SMX_Size2generator_Name = Large Multi-Fuel Generator 
-	#LOC_SMX_Size2generator_desc = A heavy-duty electric generator for when standard fuelcells just simply aren't enough to meet a vessel's power requirements. This unit fills the middle ground between fuelcells and nuclear reactors, producing more power than the former without the weight and cost of the latter. Like its smaller bretheren, this unit uses LiquidFuel/Oxidizer to produce power, but unlike them, it can also use raw Ore, though at reduced efficiency.
+	#LOC_SMX_Size2generator_desc = A heavy-duty electric generator for when standard fuelcells just simply aren't enough to meet a vessel's power requirements. This unit fills the middle ground between fuelcells and nuclear reactors, producing more power than the former without the weight and cost of the latter. Like its smaller bretheren, this unit uses LiquidFuel/Oxidizer to produce power, but unlike them, it can also use raw Ore, though at reduced efficiency. 
 
 	#LOC_SMX_Size2generator_NoOre_desc = A heavy-duty electric generator for when standard fuelcells just simply aren't enough to meet a vessel's power requirements. This generator offers the same easy power generation that Fuel Cells offer, but in a convenient 2.5 meter housing. Like the smaller fuel cells, this generator operates by converting fuel and oxidizer into energy.
 
-	#LOC_SMX_Size2generator_tags = array bank charge convert e/c elect energ pack power volt watt
+	#LOC_SMX_Size2generator_tags = SMX array bank charge convert e/c elect energ pack power volt watt
 
 	#LOC_SMX_Size2Drill_Name = 'Terravore' Stack Mining Excavator
 	#LOC_SMX_Size2Drill_desc = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. 
-	#LOC_SMX_Size2Drill_tags = drill extractor harvest isru mine )mining (ore resource
+	#LOC_SMX_Size2Drill_tags = SMX drill extractor harvest isru mine )mining (ore resource
 
 	#LOC_SMX_Size3ISRU_Name = RefineOre Y-3000 Jumbo Converter Module
 	#LOC_SMX_Size3ISRU_desc = This mobile processing plant can take raw materials containing even trace amounts of oxygen and hydrogen, and crack them into useful fuel products.  When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat.
-	#LOC_SMX_Size3ISRU_tags = conver isru mine )mining (ore process resource
+	#LOC_SMX_Size3ISRU_tags = SMX conver isru mine )mining (ore process resource
 	
 	#LOC_SMX_Size3OreTank_name = Huge Holding Tank
 	#LOC_SMX_Size3OreTank_desc = A large tank that can be used for storing raw materials.  Not to be used as a bouncy castle.
-	#LOC_SMX_Size3OreTank_tags = black isru mine )mining (ore resource store
+	#LOC_SMX_Size3OreTank_tags = SMX black isru mine )mining (ore resource store
 
-	#LOC_SMX_Size0Klaw_name = Mini Grabbing UNit
+	#LOC_SMX_Mk3OreTank_name = Mk3 Holding Tank
+#LOC_SMX_Mk3OreTank_desc = A large tank that can be used for storing raw materials that has been fitted into a Mk3 frame. 
+
+	#LOC_SMX_Size0Klaw_name = Mini Grabbing Unit
 
 	#LOC_SMX_Size3Drill_name = 'Lithoquake' Stack Mining Excavator
 	#LOC_SMX_Size3Drill_desc = The largest ventral mount heavy mining excavator marketed by the CEC. Like its smaller bretheren, it is designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat. 
-	#LOC_SMX_Size3Drill_tags = drill extractor harvest isru mine )mining (ore resource
+	#LOC_SMX_Size3Drill_tags = SMX drill extractor harvest isru mine )mining (ore resource
 
 	#LOC_SMX_StartOE = Start Pump 
 	#LOC_SMX_StopOE = Stop Pump 
