--- a/MiningExpansion/GameData/MiningExpansion/Parts/HeavyLandingLeg/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/HeavyLandingLeg/part.cfg
@@ -6,12 +6,12 @@ PART
 	MODEL
 	{
 		model = MiningExpansion/Parts/HeavyLandingLeg/Model
-		texture = tank4, Squad/Parts/FuelTank/fuelTankT100/tank4
+		texture = tank4, MiningExpansion/Parts/Assets/tank4
 		texture = landingLeg, Squad/Parts/Utility/landingLegLT-2/landingLeg
 		texture = model004, Squad/Parts/Wheel/roverWheelTR-2L/ksp_r_medWheel_wheel_diff
 	}
 	rescaleFactor = 1
-
+	mirrorRefAxis = 1, 0, 0
 	node_stack_top = 0.0, 0, 0, 0.0, 1.0, 0.0
 	TechRequired = advLanding
 	entryCost = 4900
