--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0OreTank/Microtank.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0OreTank/Microtank.cfg
@@ -23,13 +23,14 @@ description = #LOC_SMX_Size0OreTank_desc
 attachRules = 1,1,1,1,0
 
 // --- standard part parameters ---
-mass = 0.065
+mass = 0.085
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
+bulkheadProfiles = size0, srf
 tags = #LOC_SMX_Size0OreTank_tags
 MODEL
 	{
