--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
@@ -7,7 +7,7 @@ author = SuicidalInsanity
 mesh = Model.mu
 scale = 1
 rescaleFactor = 1
-node_stack_top = 0.0, 0.4997374, 0.0, 0.0, 1.0, 0.0
+node_stack_top = 0.0, 0.4997374, 0.0, 0.0, 1.0, 0.0, 0
 
 TechRequired = advScienceTech
 entryCost = 4500
@@ -26,6 +26,7 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
+bulkheadProfiles = size0
 maxTemp = 2000 // = 3000
 tags = #LOC_SMX_Size0Drill_tags
 
