--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrillH/InlineDrill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrillH/InlineDrill.cfg
@@ -6,7 +6,7 @@ author = SuicidalInsanity
 scale = 1
 rescaleFactor = 1
 node_stack_top = 0.0, 0.9764016, 0.0, 0.0, 1.0, 0.0, 1
-node_stack_bottom = 0.0, -0.9764016, 0.0, 0.0, -1.0, 0.0, 1
+node_stack_bottom = 0.0, -0.9740762, 0.0, 0.0, -1.0, 0.0, 1
 
 	MODEL
 	{
@@ -32,6 +32,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
+bulkheadProfiles = size1
 tags = #LOC_SMX_Size1InlineDrill_tags
 	MODULE
 	{
