--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
@@ -27,6 +27,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
+bulkheadProfiles = size1
 tags = #LOC_SMX_Size1Drill_tags
 MODEL
 	{
@@ -146,6 +147,6 @@ MODEL
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 400					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 200					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
