--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackPump/OceanicExtractor.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackPump/OceanicExtractor.cfg
@@ -27,6 +27,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
+bulkheadProfiles = size1
 tags = #LOC_SMX_Size1Pump_tags
 MODEL
 	{
