--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
@@ -28,6 +28,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
+bulkheadProfiles = size2
 tags = #LOC_SMX_Size2Drill_tags
 MODEL
 	{
@@ -100,7 +101,7 @@ MODEL
 		{
 			key = 0 20000
 			key = 250 17500
-			key = 500 1500
+			key = 500 15000
 			key = 750 2500
 			key = 1000 0
 		}		
@@ -146,6 +147,6 @@ MODEL
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 600					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 300					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
