--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
@@ -29,11 +29,11 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3500
+bulkheadProfiles = size3
 tags = #LOC_SMX_Size3ISRU_tags
 MODEL
 	{
 		model = MiningExpansion/Parts/Size3ISRU/Model
-		texture = mk2FuselageShort, Squad/Parts/FuelTank/mk2FuselageShort/mk2FuselageShort
 		texture = Processor_Large, Squad/Parts/Resources/ISRU/Processor_Large
 		texture = ksp_s_processorSmall_diff, Squad/Parts/Resources/MiniISRU/ksp_s_processorSmall_diff
 	}
@@ -303,7 +303,7 @@ MODEL
 		radiatorHeatingFactor = 0.01		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 4000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 1000					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 500					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 
 }
