--- a/MiningExpansion/GameData/MiningExpansion/Patch/ELPRecyclers.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Patch/ELPRecyclers.cfg
@@ -1,16 +1,16 @@
 //
-//	Allows the Tremor and Terravore to serve as recyclers
+//	Allows the stack drills to serve as recyclers
 
 @PART[SMX_2mStackDrill]:NEEDS[Launchpad]
 {
 	MODULE 
 	{
-		name = ExRecycler
+		name = ElRecycler
 	}
 
 	MODULE 
 	{
-		name = ExTarget
+		name = ElTarget
 		TargetName = Recycling Bin
 		TargetTransform = Target
 	}
@@ -19,12 +19,26 @@
 {
 	MODULE 
 	{
-		name = ExRecycler
+		name = ElRecycler
 	}
 
 	MODULE 
 	{
-		name = ExTarget
+		name = ElTarget
+		TargetName = Recycling Bin
+		TargetTransform = Target
+	}
+}
+@PART[SMX_3mStackDrill]:NEEDS[Launchpad]
+{
+	MODULE 
+	{
+		name = ElRecycler
+	}
+
+	MODULE 
+	{
+		name = ElTarget
 		TargetName = Recycling Bin
 		TargetTransform = Target
 	}
