--- a/MiningExpansion/GameData/MiningExpansion/Patch/SME_NFP.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Patch/SME_NFP.cfg
@@ -468,6 +468,163 @@
 	}
 
 }
+@PART[SMX_Mk3ISRU]:NEEDS[NearFuturePropulsion]
+{
+	MODULE
+	{
+		 name = ModuleResourceConverter
+		 ConverterName = Argon
+		 StartActionName = Start ISRU [Argon]
+		 StopActionName = Stop ISRU [Argon]
+		AutoShutdown = true
+		TemperatureModifier
+		{
+			key = 0 50000
+			key = 750 25000
+			key = 1000 5000
+			key = 1250 2500	
+			key = 2000 2500	
+			key = 4000 0
+		}				
+		GeneratesHeat = true
+		DefaultShutoffTemp = .8
+		ThermalEfficiency 
+		{
+			key = 0 0 0 0
+			key = 500 0.9 0 0
+			key = 1000 1.0 0 0
+			key = 1250 0.9 0 0
+			key = 1500 0.5 0 0
+			key = 3000 0.0 0 0 
+		}
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		Specialty = Engineer
+		EfficiencyBonus = 1
+
+		 
+		 INPUT_RESOURCE
+		 {
+			ResourceName = Ore
+			Ratio = 4
+		 }
+		 INPUT_RESOURCE
+		 {
+			ResourceName = ElectricCharge
+			Ratio = 45
+		 }
+		 OUTPUT_RESOURCE
+		 {
+			ResourceName = ArgonGas
+			Ratio = 0.13333
+			DumpExcess = false
+		 }
+	}
+	MODULE
+	{
+		 name = ModuleResourceConverter
+		 ConverterName = Xenon
+		 StartActionName = Start ISRU [Xenon]
+		 StopActionName = Stop ISRU [Xenon]
+		AutoShutdown = true
+		TemperatureModifier
+		{
+			key = 0 50000
+			key = 750 25000
+			key = 1000 5000
+			key = 1250 2500	
+			key = 2000 2500	
+			key = 4000 0
+		}				
+		GeneratesHeat = true
+		DefaultShutoffTemp = .8
+		ThermalEfficiency 
+		{
+			key = 0 0 0 0
+			key = 500 0.9 0 0
+			key = 1000 1.0 0 0
+			key = 1250 0.9 0 0
+			key = 1500 0.5 0 0
+			key = 3000 0.0 0 0 
+		}
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		Specialty = Engineer
+		EfficiencyBonus = 1
+
+		 
+		 INPUT_RESOURCE
+		 {
+			ResourceName = Ore
+			Ratio = 4
+		 }
+		 INPUT_RESOURCE
+		 {
+			ResourceName = ElectricCharge
+			Ratio = 45
+		 }
+		 OUTPUT_RESOURCE
+		 {
+			ResourceName = XenonGas
+			Ratio = 0.066666
+			DumpExcess = false
+		 }
+	}
+	MODULE
+	{
+		 name = ModuleResourceConverter
+		 ConverterName = Lithium
+		 StartActionName = Start ISRU [Lithium]
+		 StopActionName = Stop ISRU [Lithium]
+		AutoShutdown = true
+		TemperatureModifier
+		{
+			key = 0 50000
+			key = 750 25000
+			key = 1000 5000
+			key = 1250 2500	
+			key = 2000 2500	
+			key = 4000 0
+		}				
+		GeneratesHeat = true
+		DefaultShutoffTemp = .8
+		ThermalEfficiency 
+		{
+			key = 0 0 0 0
+			key = 500 0.9 0 0
+			key = 1000 1.0 0 0
+			key = 1250 0.9 0 0
+			key = 1500 0.5 0 0
+			key = 3000 0.0 0 0 
+		}
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		Specialty = Engineer
+		EfficiencyBonus = 1
+
+		 
+		 INPUT_RESOURCE
+		 {
+			ResourceName = Ore
+			Ratio = 2
+		 }
+		 INPUT_RESOURCE
+		 {
+			ResourceName = ElectricCharge
+			Ratio = 45
+		 }
+		 OUTPUT_RESOURCE
+		 {
+			ResourceName = Lithium
+			Ratio = 2.5
+			DumpExcess = false
+		 }
+	}
+
+}
 
 @PART[SMX_Size1AtmCondenser]:NEEDS[NearFuturePropulsion]
 {
