--- a/MiningExpansion/GameData/MiningExpansion/Patch/XenonGas.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Patch/XenonGas.cfg
@@ -18,8 +18,8 @@ GLOBAL_RESOURCE
 	Distribution
 	{
 		PresenceChance = 50
-		MinAbundance = 0.00000005
-		MaxAbundance = 0.0000005
+		MinAbundance = 0.5
+		MaxAbundance = 3
 		Variance = 5
 	}
 }
@@ -31,8 +31,8 @@ GLOBAL_RESOURCE
 	Distribution
 	{
 		PresenceChance = 50
-		MinAbundance = .0001
-		MaxAbundance = 0.01
+		MinAbundance = 0.01
+		MaxAbundance = 0.1
 		Variance = 50
 	}
 }
@@ -45,8 +45,22 @@ PLANETARY_RESOURCE
 	Distribution
 	{
 		PresenceChance = 100
-		MinAbundance = 0.00000009
-		MaxAbundance = 0.0000002
+		MinAbundance = 0.025
+		MaxAbundance = 0.1
+		Variance = 5
+	}
+}
+PLANETARY_RESOURCE
+{
+	ResourceName = XenonGas
+	ResourceType = 2
+	PlanetName = Jool
+	
+	Distribution
+	{
+		PresenceChance = 100
+		MinAbundance = 0.5
+		MaxAbundance = 1.0
 		Variance = 5
 	}
 }
