--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
@@ -25,10 +25,14 @@ attachRules = 1,1,1,1,0
 mass = 1.3
 dragModelType = default
 maximum_drag = 0.2
-minimum_drag = 0.2
-angularDrag = 2
-crashTolerance = 7
-maxTemp = 2000 // = 3000
+minimum_drag = 0.3
+angularDrag = 1
+crashTolerance = 50
+breakingForce = 50
+breakingTorque = 50
+maxTemp = 2500 // = 3000
+emissiveConstant = 0.8
+bulkheadProfiles = mk2
 tags = #LOC_SMX_InlineDril_Tags 
 
 	MODEL
