--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0Generator/Generator.cfg
@@ -9,7 +9,7 @@ MODEL
 	model = MiningExpansion/Parts/Size0Generator/Model
 	texture = fuellcell, Squad/Parts/Resources/FuelCell/fuellcell
 	texture = ksp_l_batteryPack_diff, Squad/Parts/Electrical/z-4kBattery/ksp_l_batteryPack_diff
-	texture = tank4, Squad/Parts/FuelTank/fuelTankT100/tank4
+	texture = tank4, MiningExpansion/Parts/Assets/tank4
 
 }
 
@@ -37,6 +37,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
+bulkheadProfiles = size0, srf
 tags = #LOC_SMX_Size0Generator_tags
 
 	MODULE
