--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0ISRU/ISRU.cfg
@@ -28,6 +28,7 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
+bulkheadProfiles = size0
 maxTemp = 2000 // = 3500
 tags = #LOC_SMX_Size0Converter_tags
 
