--- a/MiningExpansion/GameData/MiningExpansion/Patch/SME_KA.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Patch/SME_KA.cfg
@@ -106,10 +106,10 @@ MODULE
 {
 	MODULE
 	{
-		 name = ModuleResourceConverter
-		 ConverterName = LH2
-		 StartActionName = Start ISRU [LH2]
-		 StopActionName = Stop ISRU [LH2]
+		name = ModuleResourceConverter
+		ConverterName = LH2
+		StartActionName = Start ISRU [LH2]
+		StopActionName = Stop ISRU [LH2]
 		AutoShutdown = true
 		TemperatureModifier
 		{
@@ -155,6 +155,7 @@ MODULE
 			DumpExcess = false
 		 }
 	}
+}
 @PART[SMX_Size3ISRU]:NEEDS[KerbalAtomics]
 {
 	MODULE
@@ -205,6 +206,60 @@ MODULE
 		 {
 			ResourceName = LqdHydrogen
 			Ratio = 3.6
+			DumpExcess = false
+		 }
+	}
+}
+@PART[SMX_Mk3ISRU]:NEEDS[KerbalAtomics]
+{
+	MODULE
+	{
+		 name = ModuleResourceConverter
+		 ConverterName = LH2
+		 StartActionName = Start ISRU [LH2]
+		 StopActionName = Stop ISRU [LH2]
+		AutoShutdown = true
+		TemperatureModifier
+		{
+			key = 0 50000
+			key = 750 25000
+			key = 1000 5000
+			key = 1250 2500	
+			key = 2000 2500	
+			key = 4000 0
+		}				
+		GeneratesHeat = true
+		DefaultShutoffTemp = .8
+		ThermalEfficiency 
+		{
+			key = 0 0 0 0
+			key = 500 0.9 0 0
+			key = 1000 1.0 0 0
+			key = 1250 0.9 0 0
+			key = 1500 0.5 0 0
+			key = 3000 0.0 0 0 
+		}
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		Specialty = Engineer
+		EfficiencyBonus = 1
+
+		 
+		 INPUT_RESOURCE
+		 {
+			ResourceName = Ore
+			Ratio = 1.66
+		 }
+		 INPUT_RESOURCE
+		 {
+			ResourceName = ElectricCharge
+			Ratio = 45
+		 }
+		 OUTPUT_RESOURCE
+		 {
+			ResourceName = LqdHydrogen
+			Ratio = 3.0
 			DumpExcess = false
 		 }
 	}
