--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2Driver/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2Driver/part.cfg
@@ -26,7 +26,7 @@ PART
 	angularDrag = 2
 	crashTolerance = 7
 	maxTemp = 2000 // = 3600
-	bulkheadProfiles = Size2
+	bulkheadProfiles = size2
 	tags = #LOC_SMX_Driver_tags
 	MODEL
 	{
