--- a/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
@@ -10,8 +10,43 @@ Localization
     #LOC_SMX_manufacturer_description = With the advent of offworld mining came changes to the mining industry. The CEC is a loose alliance of both established mining firms and tech startups that have banded together to evaluate, exploit, and expand their buisness models to include the newfound mineral wealth of other celestial bodies. To that end CEC has worked to develop tools and equipment to do the job, from small and portable kit suitable for probes to massive extractors and refineries capable of supplying the needs of even the largest of mining bases.
     
     // PARTS
-	#LOC_SMX_HeavyLeg_Name = J-7 Superheavy Duty Landing Leg
+	#LOC_SMX_PotatoHab_name = Inflatible Asteroid Habitat
+	#LOC_SMX_PotatoHab_desc = Ever wanted to get more out of asteroids after finishing mining them out? Combining a mining auger and an inflatible crew module, this self-installing unit can convert any asteroid into an instant space station.
+	#LOC_SMX_PotatoHab_tags = base cabin (can outpost passenger statio tour asteroid claw klaw
+
+	#LOC_SMX_ADP_Name = Anchorable Docking Port
+	#LOC_SMX_ADP_desc = The brainchild of a bored intern during a design team meeting discussing orbital constuction and asteroids, the Anchorable Docking port is intended to bridge the gap between Klaws and standard spacecraft docking solutions. Featuring a docking port on one end and a mining auger on the other, the ADP can be attached to an asteroid, then use the auger to anchor the port, providing a stable, permanent attachment point for future cosntruction or ships to the asteroid.
+	#LOC_SMX_ADP_tags = a.r.m arm asteroid capture clam claw connect dock fasten grab join klaw nasa berth capture connect couple dock fasten join moor socket
+
+	#LOC_SMX_ArmKlaw = Arm Klaw
+	#LOC_SMX_DisarmKlawKlaw = Disarm Klaw
+	#LOC_SMX_AnchorHab = Excavate Crew Quarters
+	#LOC_SMX_AnchorPort = Anchor Docking Port
+
+	#LOC_SMX_HeavyLeg_Name = LS-7 Superheavy Duty Landing Leg
 	#LOC_SMX_HeavyLeg_desc = A super heavy duty landing leg intended to take whatever is thrown at it, from hard landings to supporting multi-hundred ton bases and rigs to providing clearance for even the biggest of mining equipment. Can be surface or stack mounted.
+
+	#LOC_SMX_RadialHeavyLeg_Name = LR-9 Superheavy-duty landing Leg
+	#LOC_SMX_RadialHeavyLeg_desc = A super heavy duty landing leg intended to take whatever is thrown at it, from hard landings to supporting multi-hundred ton bases and rigs to providing clearance for even the biggest of mining equipment.
+
+	#LOC_SMX_DeployableWheel = D1-MR Deployable Wheel
+	#LOC_SMX_DeployableWheel_desc = The D1-MR is a robust wheel intended for larger scale vehicles or mobile platforms, providing a combination of power, reliability, and utility across a wide variety of terrain. Intended for off-world deployment, the D1-MR can be retracted and stowed during launch, when space inside a fairing is limited.
+
+	#LOC_SMX_InlineWheelS = F2-MR Multirole Deployable Wheel
+	#LOC_SMX_InlineWheelS_desc =  A smaller variant of the F1 and D1 deployable wheels. Like its larger F1 sibling, the F2 comes with an inline housing for aerodynamic storage suitable for use on larger aircraft or mobile bases intended for deployment to worlds with atmospheres.
+
+	#LOC_SMX_InlineWheelL = F1-MR Multirole Deployable Wheel
+	#LOC_SMX_InlineWheelL_desc = A variant of the D1 Deployable Wheel that adds a second tyre and an inline housing for aerodynamic storage of the wheel when not in use, for applications where normal wheels would not fit within a fairing during flight or aerodynamics are required.
+
+	#LOC_SMX_VerticalGear = LT-30 Wheeled Landing Strut
+	#LOC_SMX_VerticalGearL = LT-60 Wheeled Landing Strut
+	#LOC_SMX_PoddedVGear = LY-30 Vertical Landing Gear
+	#LOC_SMX_PoddedVGearL = LY-60 Vertical Landing Gear
+
+	#LOC_SMX_VerticalGear_desc = A hybrid between traditional landing struts and aircraft landing gear, the LT-30 Wheeled landing Strut provides a heavy-duty landing gear for bases, rigs, or vertically landing ships that may require ground mobility.
+	#LOC_SMX_PoddedVGear_desc = A podded variant of the LT-30 Wheeled Landing Strut for atmospheric use.
+	#LOC_SMX_PoddedVGearL_desc = A podded variant of the LT-60 Wheeled landing Strut for atmospheric  use.
+	#LOC_SMX_DeployableWheel_Tags = )car drive ground roll rover wheel ground land leg support
 
 	#LOC_SMX_Mk2Generator_Name = Mk2 Multi-Fuel Generator
 	#LOC_SMX_MK2Generator_desc = A Mk2 fuselage mounted heavy-duty electric generator for when fuelcells just simply aren't enough to meet a vessel's power requirements. This unit fills the middle ground between fuelcells and nuclear reactors, producing more power than the former without the weight and cost of the latter. Like its smaller bretheren, this unit uses LiquidFuel/Oxidizer to produce power, but unlike them, it can also use raw Ore, though at reduced efficiency.
@@ -112,6 +147,8 @@ Localization
 #LOC_SMX_Mk3OreTank_desc = A large tank that can be used for storing raw materials that has been fitted into a Mk3 frame. 
 
 	#LOC_SMX_Size0Klaw_name = Mini Grabbing Unit
+	#LOC_SMX_RadialKlaw_Name = Advanced Grabbing Arm
+	#LOC_SMX_RadialKlaw_desc = A radially mounted iteration of the Klaw that adds an arm assembly, giving this unit even greater reach and grabbing capability than the original. Warranty void if used as a landing leg.
 
 	#LOC_SMX_Size3Drill_name = 'Lithoquake' Stack Mining Excavator
 	#LOC_SMX_Size3Drill_desc = The largest ventral mount heavy mining excavator marketed by the CEC. Like its smaller bretheren, it is designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat. 
