--- a/MiningExpansion/GameData/MiningExpansion/Parts/HeavyLandingLeg/StackLeg.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/HeavyLandingLeg/StackLeg.cfg
@@ -36,6 +36,72 @@ PART
      breakingTorque = 250
 	bulkheadProfiles = srf, size1
 	tags = #autoLOC_500881 //#autoLOC_500881 = ground land leg support
+
+EFFECTS
+	{
+		deploy
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Squad/Sounds/elev_start
+				volume = 0 0
+				volume = 1 0.5
+				pitch = 0.9
+			}
+			AUDIO_LOOP
+			{
+				channel = Ship
+				clip = Squad/Sounds/elev_loop
+				volume = 0 0
+				volume = 1 0.5
+				pitch = 0.65
+			}
+		}
+		deployed
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Squad/Sounds/elev_stop
+				volume = 0 0
+				volume = 1 0.5
+				pitch = 0.8
+			}
+		}
+		retract
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Squad/Sounds/elev_stop
+				volume = 0 0
+				volume = 1 0.5
+				pitch = 0.9
+			}
+			AUDIO_LOOP
+			{
+				channel = Ship
+				clip = Squad/Sounds/elev_loop
+				volume = 0 0
+				volume = 1 0.5
+				pitch = 0.65
+			}
+		}
+		retracted
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Squad/Sounds/elev_start
+				volume = 0 0
+				volume = 1 0.5
+				pitch = 0.9
+			}
+		}
+	}
+
+
 	MODULE
 	{
 		name = ModuleWheelBase		
@@ -79,6 +145,11 @@ PART
 		deployTargetTransformName = deployTgt
 		
 		TsubSys = 0.8
+
+		fxDeploy = deploy
+		fxRetract = retract
+		fxDeployed = deployed
+		fxRetracted = retracted
 	}
 	MODULE
 	{
