--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2Generator/Generator.cfg
@@ -35,9 +35,9 @@ dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
-crashTolerance = 7
+crashTolerance = 20
 maxTemp = 2000 // = 3000
-bulkheadProfiles = size2
+bulkheadProfiles = size2, srf
 tags = #LOC_SMX_Size2generator_tags
 
 	MODULE
