--- a/MiningExpansion/GameData/MiningExpansion/Patch/SME_CE.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Patch/SME_CE.cfg
@@ -12,7 +12,7 @@ PLANETARY_RESOURCE
 		Variance = 50
 	}
 }
-@PART[SMX_Size1AtmCondenser]:NEEDS[KerbalAtomics]
+@PART[SMX_Size1AtmCondenser]:NEEDS[CryoTanks]
 {
 MODULE
 	{
@@ -30,7 +30,7 @@ MODULE
 	 	}
 	}
 }
-@PART[SMX_Size2AtmCondenser]:NEEDS[KerbalAtomics]
+@PART[SMX_Size2AtmCondenser]:NEEDS[CryoTanks]
 {
 MODULE
 	{
@@ -48,7 +48,7 @@ MODULE
 	 	}
 	}
 }
-@PART[SMX_Size0ISRU]:NEEDS[KerbalAtomics]
+@PART[SMX_Size0ISRU]:NEEDS[CryoTanks]
 {
 	MODULE
 	{
@@ -102,7 +102,7 @@ MODULE
 		 }
 	}
 }
-@PART[SMX_Mk2ISRURefinery]:NEEDS[KerbalAtomics]
+@PART[SMX_Mk2ISRURefinery]:NEEDS[CryoTanks]
 {
 	MODULE
 	{
@@ -156,7 +156,7 @@ MODULE
 		 }
 	}
 }
-@PART[SMX_Size3ISRU]:NEEDS[KerbalAtomics]
+@PART[SMX_Size3ISRU]:NEEDS[CryoTanks]
 {
 	MODULE
 	{
@@ -210,7 +210,7 @@ MODULE
 		 }
 	}
 }
-@PART[SMX_Mk3ISRU]:NEEDS[KerbalAtomics]
+@PART[SMX_Mk3ISRU]:NEEDS[CryoTanks]
 {
 	MODULE
 	{
@@ -265,3 +265,4 @@ MODULE
 	}
 
 }
+
