--- a/MiningExpansion/GameData/MiningExpansion/Patch/SME_Tweakscale.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Patch/SME_Tweakscale.cfg
@@ -6,6 +6,14 @@
         %defaultScale = 1.25
     }
 }
+@PART[SMX_RadialPillarLeg]:NEEDS[TweakScale]:FINAL
+{
+    %MODULE[TweakScale]
+    {
+        %type = surface
+        %defaultScale = 1.25
+    }
+}
 @PART[SMX_Mk2Generator]:NEEDS[TweakScale]:FINAL
 {
     %MODULE[TweakScale]
@@ -231,5 +239,37 @@
     {
         %type = stack
         %defaultScale = 3.75
+    }
+}
+@PART[SMX_AsteroidPort]:NEEDS[TweakScale]:FINAL
+{
+    %MODULE[TweakScale]
+    {
+        %type = stack
+        %defaultScale = 1.25
+    }
+}
+@PART[SMX_DeployableWheel]:NEEDS[TweakScale]:FINAL
+{
+    %MODULE[TweakScale]
+    {
+        %type = surface
+        %defaultScale = 1.25
+    }
+}
+@PART[SMX_PoddedDeployableWheelL]:NEEDS[TweakScale]:FINAL
+{
+    %MODULE[TweakScale]
+    {
+        %type = surface
+        %defaultScale = 1.25
+    }
+}
+@PART[SMX_PoddedDeployableWheelS]:NEEDS[TweakScale]:FINAL
+{
+    %MODULE[TweakScale]
+    {
+        %type = surface
+        %defaultScale = 0.625
     }
 }
