--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2Driver/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2Driver/part.cfg
@@ -24,9 +24,9 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 7
+	crashTolerance = 15
 	maxTemp = 2000 // = 3600
-	bulkheadProfiles = Size2
+	bulkheadProfiles = size2
 	tags = #LOC_SMX_Driver_tags
 	MODEL
 	{
