--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
@@ -27,9 +27,9 @@ dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
-crashTolerance = 7
+crashTolerance = 30
 maxTemp = 2000 // = 3500
-bulkheadProfiles = size3
+bulkheadProfiles = size3, srf
 tags = #LOC_SMX_Size3ISRU_tags
 MODEL
 	{
